# blogging

./: .replit  .replit.new  .workflow-metadata.json  Backup_UpdatedLatest.py  Backup_app.py  Html_Play.py  Notes_git_process_Check  UpdateRemote  UpdatedLatest.py  access-2025-07-19.txt  access-2025-07-21.txt  access-2025-07-22.txt  access-2025-07-23.txt  app.py  data-PAPER.pickle  email_subscription_check.py  flask_app.py  flask_techblog.py  flask_workflow.sh  init_db.py  launch.py  old_nifty_options_report.html  pyproject.toml  python_module_list.txt  report_20250722_230642.html  requirement.txt  run.py  run.sh  run_flask.py  start_trading.sh  trades_nifty_supertrend_option_selling_2025-07-21.csv  trades_nifty_supertrend_option_selling_2025-07-22.csv  trading_log.txt  trading_routes_complete.py  trading_state.txt  trading_stop_signal.txt  wsgi.py
Reports_Logs/: access-2025-07-14.txt  access-2025-07-15.txt  report_20250714_025532.html  report_20250714_113837.html  trades_nifty_supertrend_option_selling_2025-07-11.csv  trades_nifty_supertrend_option_selling_2025-07-14.csv
client/src/: App.tsx  index.css
client/src/hooks/: use-categories.ts
client/src/lib/: constants.ts  utils.ts
instance/: techblog.db  techblog_old.db
server/: routes.ts  storage.ts
shared/: schema.ts
static/: ads.txt
static/code/: fyers_script.html
static/css/: styles.css
static/js/: scripts.js
templates/: 404.html  Working_trading_dashboard.html  about.html  base.html  category.html  create_token.html  home.html  post.html  search.html  topic.html  trading_dashboard.html
(+13 files in other folders)
