[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "python-dotenv>=1.1.0",
    "werkzeug>=3.1.3",
]
